fix: Fix select background in Chromium in dark mode

--- a/assets/scss/_dark_mode.scss
+++ b/assets/scss/_dark_mode.scss
@@ -31,7 +31,7 @@
     }
 
     .form-select {
-        background: transparent;
+        background: bootstrap.$dark;
         color: #fff;
         border-color: bootstrap.$secondary;
     }
